# brave-core

./: BUILD.gn  Jenkinsfile  package-lock.json  package.json
.storybook/: BUILD.gn
android/: android_browser_tests.gni
app/: brave_command_ids.h  brave_generated_resources.grd  brave_main_delegate_browsertest.cc  brave_settings_strings.grdp
browser/: BUILD.gn  about_flags.cc  brave_app_controller_mac.h  brave_app_controller_mac.mm  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_features_internal_names.h  brave_local_state_prefs.cc  sources.gni
browser/brave_ads/: sources.gni
browser/brave_ads/search_result_ad/: search_result_ad_browsertest.cc  search_result_ad_tab_helper.cc  search_result_ad_tab_helper.h
browser/brave_shields/: https_upgrade_browsertest.cc
browser/brave_stats/: brave_stats_updater.cc  brave_stats_updater.h
browser/brave_vpn/: brave_vpn_service_factory.cc
browser/brave_vpn/dns/: brave_vpn_dns_observer_factory.cc  brave_vpn_dns_observer_service.cc  brave_vpn_dns_observer_service.h  brave_vpn_dns_observer_service_unittest.cc
browser/brave_vpn/test/: BUILD.gn
browser/brave_wallet/: brave_wallet_service_unittest.cc
browser/brave_wallet/notifications/: wallet_notification_service_unittest.cc
browser/extensions/: brave_extension_provider_browsertest.cc
browser/net/: BUILD.gn  brave_site_hacks_network_delegate_helper.cc
browser/permissions/: BUILD.gn  google_sign_in_permission_browsertest.cc
browser/playlist/test/: playlist_browsertest.cc
browser/resources/settings/: brave_routes.ts
browser/tor/: BUILD.gn
browser/ui/: BUILD.gn  brave_browser_command_controller.cc  brave_shields_data_controller.cc  browser_commands.cc  browser_commands.h
browser/ui/bookmark/: bookmark_helper.cc  bookmark_helper.h  bookmark_helper_unittest.cc
browser/ui/toolbar/: bookmark_bar_sub_menu_model.cc  bookmark_bar_sub_menu_model.h  brave_bookmark_context_menu_controller.cc  brave_bookmark_context_menu_controller.h  brave_bookmark_context_menu_controller_unittest.cc  brave_bookmark_sub_menu_model_unittest.cc
browser/ui/views/: brave_icon_with_badge_image_source.cc  brave_icon_with_badge_image_source.h  ui_utils.cc  ui_utils.h
common/importer/: chrome_importer_utils.cc
components/brave_vpn/: BUILD.gn  brave_vpn_api_request.cc  brave_vpn_os_connection_api.cc  brave_vpn_os_connection_api.h  brave_vpn_os_connection_api_win.cc  brave_vpn_resources.h  brave_vpn_unittest.cc  brave_vpn_utils.cc  brave_vpn_utils.h  brave_vpn_utils_unittest.cc  pref_names.h  utils_win.cc
components/brave_vpn/win/brave_vpn_helper/: BUILD.gn  brave_vpn_dns_delegate.h  brave_vpn_helper_crash_reporter_client.cc  brave_vpn_helper_crash_reporter_client.h  main.cc  service_main.cc  service_main.h  vpn_dns_handler.cc  vpn_dns_handler.h  vpn_dns_handler_unittest.cc  vpn_utils.cc  vpn_utils.h
components/core_metrics/: BUILD.gn  core_metrics_service.cc  general_browser_usage.cc  general_browser_usage.h  pref_names.cc  pref_names.h
components/definitions/: playlist.d.ts
components/google_sign_in_permission/browser/: BUILD.gn  DEPS  google_sign_in_permission_throttle.cc  google_sign_in_permission_throttle.h  google_sign_in_permission_util.cc  google_sign_in_permission_util.h
components/misc_metrics/: menu_metrics.cc  menu_metrics.h  menu_metrics_unittest.cc
components/p3a/: metric_names.h
components/permissions/: sources.gni
components/playlist/: media_detector_component_manager.cc
components/resources/: brave_components_strings.grd  brave_shields_strings.grdp  rewards_strings.grdp  wallet_strings.grdp
components/sidebar/: BUILD.gn  sidebar_service.cc
components/time_period_storage/: iso_weekly_storage.cc  time_period_storage.cc
patches/: PRESUBMIT.py.patch  chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-browser-BUILD.gn.patch  chrome-browser-resources-settings-settings_routes.ts.patch  chrome-browser-resources-settings-site_settings-category_default_setting.ts.patch  chrome-browser-upgrade_detector-upgrade_detector_impl.cc.patch  chrome-renderer-BUILD.gn.patch  chrome-test-BUILD.gn.patch  content-browser-loader-navigation_url_loader_impl.cc.patch  content-browser-renderer_host-navigation_controller_impl.cc.patch  content-browser-renderer_host-navigation_request.cc.patch  content-browser-renderer_host-render_frame_host_impl.cc.patch  content-browser-service_worker-service_worker_controllee_request_handler.cc.patch  content-browser-service_worker-service_worker_fetch_dispatcher.cc.patch  content-browser-service_worker-service_worker_main_resource_loader.cc.patch  content-browser-service_worker-service_worker_main_resource_loader_interceptor.cc.patch  content-renderer-render_frame_impl.cc.patch  extensions-common-api-_permission_features.json.patch
test/: BUILD.gn
test/base/: testing_brave_browser_process.cc  testing_brave_browser_process.h
vpn/: BUILD.gn  main.cc  service_main.cc  service_main.h  vpn.rc  vpn_dns_handler.cc  vpn_dns_handler.h  vpn_dns_handler_unittest.cc  vpn_utils.cc  vpn_utils.h
(+213 files in other folders)
