# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

source_set("browser") {
  sources = [
    "google_sign_in_permission_throttle.cc",
    "google_sign_in_permission_throttle.h",
    "google_sign_in_permission_util.cc",
    "google_sign_in_permission_util.h",
  ]

  deps = [
    "//base",
    "//brave/components/constants",
    "//brave/components/google_sign_in_permission/common",
    "//components/content_settings/core/browser:browser",
    "//components/permissions:permissions",
    "//components/prefs:prefs",
    "//components/user_prefs:user_prefs",
    "//content/public/browser",
    "//extensions/common:common",
    "//gin",
    "//mojo/public/cpp/bindings",
    "//third_party/blink/public:blink",
    "//third_party/blink/public/common",
    "//v8",
  ]
}
