# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/toolchain/win/midl.gni")
import("//build/util/process_version.gni")
import("//chrome/process_version_rc_template.gni")

# Must be in a config because of how GN orders flags (otherwise /W4 will appear
# after this, and turn it back on).
config("no-missing-braces") {
  # Macros invoked by WRL CoCreatableClass omit optional braces.
  cflags = [ "-Wno-missing-braces" ]
}

source_set("lib") {
  sources = [
    "vpn_dns_handler.cc",
    "vpn_dns_handler.h",
    "vpn_utils.cc",
    "vpn_utils.h",
  ]

  deps = [
    "//base",
    "//brave//components/brave_vpn/common",
    "//brave//components/brave_vpn/win:utils",
    "//third_party/abseil-cpp:absl",
  ]

  libs = [
    "Fwpuclnt.lib",
    "Iphlpapi.lib",
  ]
}

executable("brave_vpn_helper") {
  sources = [
    "main.cc",
    "service_main.cc",
    "service_main.h",
  ]

  deps = [
    ":lib",
    ":version_resources",
    "//base",
    "//brave/components/brave_vpn/common",
    "//build/win:default_exe_manifest",
  ]
}

process_version_rc_template("version_resources") {
  sources = [ "brave_vpn_helper.ver" ]
  output = "$target_gen_dir/brave_vpn_helper_exe.rc"
}

source_set("unit_tests") {
  testonly = true
  assert(is_win)
  sources = [ "vpn_dns_handler_unittest.cc" ]

  deps = [
    ":lib",
    "//base",
    "//base/test:test_support",
    "//brave/components/brave_vpn/common",
    "//testing/gtest",
    "//third_party/abseil-cpp:absl",
  ]
}
